Ignore reflection/illegal reflective access warnings in project.clj