@@ -20,5 +20,6 @@
                  [cljsjs/vega-lite "3.0.0-rc10-0"]
                  [cljsjs/vega-embed "3.26.0-0"]
                  [cljsjs/codemirror "5.44.0-1"]]
-  :global-vars {*warn-on-reflection* true}
-  :main example-standalone-webservice.main)
+  :global-vars {*warn-on-reflection* false}
+  :main example-standalone-webservice.main
+  :jvm-opts ["--illegal-access=deny"])
